// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Subpart Subpart Full 1`] = `
<table>
  <tbody>
    <tr>
      <td
        className="sc-gKAblj clqaqU"
      >
        2
      </td>
      <td
        className="sc-gKAblj clqaqU"
      >
        screw
      </td>
      <td
        className="sc-gKAblj clqaqU"
      >
        50
      </td>
      <td
        className="sc-iCoHVE fvxUuy"
      >
        <img
          alt="Subpart with id: 2"
          src="https://www.rifaidate.it/attrezzi/chiodi-e-viti/viti-passo-inglese_O1.jpg"
        />
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Subpart Subpart No Img 1`] = `
<table>
  <tbody>
    <tr>
      <td
        className="sc-gKAblj clqaqU"
      >
        2
      </td>
      <td
        className="sc-gKAblj clqaqU"
      >
        screw lorem ipsum scripta manent verba volant
      </td>
      <td
        className="sc-gKAblj clqaqU"
      >
        250
      </td>
      <td
        className="sc-iCoHVE fvxUuy"
      />
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Subpart Subpart No Quantity 1`] = `
<table>
  <tbody>
    <tr>
      <td
        className="sc-gKAblj clqaqU"
      >
        2
      </td>
      <td
        className="sc-gKAblj clqaqU"
      >
        screw lorem ipsum scripta manent verba volant
      </td>
      <td
        className="sc-gKAblj clqaqU"
      >
        1
      </td>
      <td
        className="sc-iCoHVE fvxUuy"
      >
        <img
          alt="Subpart with id: 2"
          src="https://www.rifaidate.it/attrezzi/chiodi-e-viti/viti-passo-inglese_O1.jpg"
        />
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Subpart Subpart With Long Name 1`] = `
<table>
  <tbody>
    <tr>
      <td
        className="sc-gKAblj clqaqU"
      >
        2
      </td>
      <td
        className="sc-gKAblj clqaqU"
      >
        screw lorem ipsum scripta manent verba volant
      </td>
      <td
        className="sc-gKAblj clqaqU"
      >
        250
      </td>
      <td
        className="sc-iCoHVE fvxUuy"
      >
        <img
          alt="Subpart with id: 2"
          src="https://www.rifaidate.it/attrezzi/chiodi-e-viti/viti-passo-inglese_O1.jpg"
        />
      </td>
    </tr>
  </tbody>
</table>
`;
